# CppRayTracing

./: CMakeLists.txt
src/: main.cpp
src/engine/: engine.cpp  engine.h  utils.cpp  utils.h
src/objects/: camera.cpp  camera.h  ray.cpp  ray.h  sphere.cpp  sphere.h  vector3d.cpp  vector3d.h  visible_object.cpp  visible_object.h
src/utils/: utils.cpp  utils.h
